--- a/demos/autoCheck/build.gradle
+++ b/demos/autoCheck/build.gradle
@@ -1,13 +1,6 @@
 group 'com.tz'
 version '1.0-SNAPSHOT'
 
-/*allprojects {
-    repositories {
-	    mavenLocal()
-        maven{ url 'http://maven.oschina.net/content/groups/public/'}
-    }
-}*/
-
 //A Gradle plugin that provides Maven-like dependency management functionality
 buildscript {
     repositories {
@@ -17,77 +10,55 @@ buildscript {
     }
     dependencies {
         classpath "io.spring.gradle:dependency-management-plugin:0.5.2.RELEASE"
-
         //and set VM options for debug usage : -Xdebug -Xrunjdwp:transport=dt_socket,server=y,suspend=n,address=5005
         classpath 'com.bmuschko:gradle-tomcat-plugin:2.2.2'
         classpath "org.springframework.boot:spring-boot-gradle-plugin:1.2.5.RELEASE"
     }
 }
 
+//项目插件
 apply plugin: 'java'
 apply plugin: 'war'
 apply plugin: 'groovy'
 apply plugin: 'maven'
-//apply plugin: "io.spring.dependency-management"
 apply plugin: 'com.bmuschko.tomcat'
 apply plugin: 'spring-boot'
 apply plugin: 'jacoco'
 
-sourceCompatibility = 1.7
-targetCompatibility = 1.7
-
+//配置依赖下载仓库
 repositories {
     mavenLocal()
     maven{ url 'http://maven.oschina.net/content/groups/public/'}
     mavenCentral()
 }
 
+//设置编码
 compileJava.options.encoding = 'UTF-8'
+compileGroovy.options.encoding = 'UTF-8'
 compileTestJava.options.encoding = 'UTF-8'
+compileTestGroovy.options.encoding = 'UTF-8'
 
+//编译级别
+sourceCompatibility = 1.7
+targetCompatibility = 1.7
+
+//设置源码路径
 sourceSets {
     main {
         groovy {
-            // override the default locations, rather than adding additional ones
             srcDirs = ['src/main/groovy', 'src/main/java']
         }
-        java {srcDirs = []} // don't compile Java code twice
+        java {srcDirs = []}
     }
     test {
         groovy {
-//            srcDirs = ['src/test/groovy']
             srcDirs = ['src/test/java', 'src/test/groovy']
         }
-        java{
-//            srcDirs = ['src/test/java']
-            srcDirs = []
-        }
+        java{srcDirs = []}
     }
 }
 
-/*dependencyManagement {
-    *//*imports {
-        mavenBom 'org.springframework:spring-framework-bom:4.0.1.RELEASE'
-    }*//*
-    dependencies {
-//        def springbootVersion = '1.2.5.RELEASE'
-        dependencySet(group:'org.springframework.boot',
-                    version: '1.2.5.RELEASE') {
-            entry 'spring-boot-starter'
-            entry 'spring-boot-starter-data-jpa'
-            entry 'spring-boot-starter-web'
-            entry 'spring-boot-starter-test'
-        }
-
-        dependency "org.apache.struts:struts2-convention-plugin:2.3.24"
-
-        dependency "commons-dbcp:commons-dbcp:1.4"
-        dependency "com.h2database:h2:1.3.176"
-        dependency 'org.codehaus.groovy:groovy-all:2.4.4'
-        dependency group:'junit', name:'junit', version:'4.12'
-    }
-}*/
-
+//tomcat启动参数
 tomcat {
     httpPort = 18888
     httpsPort = 18443
@@ -103,10 +74,9 @@ configurations {
     all*.exclude group: 'org.slf4j', module: 'log4j-over-slf4j'
 }
 
+//项目依赖
 dependencies {
     def springbootVersion = '1.2.5.RELEASE'
-    def struts2Version = '2.3.24'
-    def tomcatVersion = '7.0.55'
     compile "org.springframework.boot:spring-boot-starter:$springbootVersion"
     compile "org.springframework.boot:spring-boot-starter-data-jpa:$springbootVersion"
     compile("org.springframework.boot:spring-boot-starter-web:$springbootVersion"){
@@ -114,36 +84,30 @@ dependencies {
     }
     compile "org.springframework.boot:spring-boot-starter-test:$springbootVersion"
 
-//    compile "org.springframework:spring-web:$springbootVersion"
-
-//    compile("org.springframework.boot:spring-boot-starter-logging:$springbootVersion"){
-//        exclude group: 'ch.qos.logback', module: 'logback-classic'
-//    }
-
+    def struts2Version = '2.3.24'
     compile "org.apache.struts:struts2-convention-plugin:$struts2Version"
     compile "org.apache.struts:struts2-spring-plugin:$struts2Version"
     compile "org.apache.struts:struts2-json-plugin:$struts2Version"
+    testCompile "org.apache.struts:struts2-junit-plugin:$struts2Version"
 
     compile "commons-dbcp:commons-dbcp:1.4"
     compile 'com.h2database:h2:1.3.176'
     compile 'org.apache.ant:ant:1.9.4'
-//    compile 'org.codehaus.groovy:groovy-all:2.4.4'
-    compile 'org.codehaus.groovy:groovy-all:2.4.1'
+    compile 'org.codehaus.groovy:groovy-all:2.4.4'
+//    compile 'org.codehaus.groovy:groovy-all:2.4.1'
     compile 'org.slf4j:slf4j-log4j12:1.7.12'
-
     providedCompile "javax.servlet:javax.servlet-api:3.1.0"
-
     testCompile 'junit:junit:4.12'
-    testCompile "org.apache.struts:struts2-junit-plugin:$struts2Version"
     testCompile "javax.servlet.jsp:jsp-api:2.2"
 
+    def tomcatVersion = '7.0.55'
     testRuntime "org.apache.tomcat.embed:tomcat-embed-el:$tomcatVersion"
-
     tomcat "org.apache.tomcat.embed:tomcat-embed-core:$tomcatVersion",
             "org.apache.tomcat.embed:tomcat-embed-logging-juli:$tomcatVersion",
             "org.apache.tomcat.embed:tomcat-embed-jasper:$tomcatVersion"
 }
 
+//产生 pom.xml task
 task generatePom << {
     pom {
         project {
