--- a/demos/autoCheck/build.gradle
+++ b/demos/autoCheck/build.gradle
@@ -74,6 +74,45 @@ configurations {
     all*.exclude group: 'org.slf4j', module: 'log4j-over-slf4j'
 }
 
+//task -- 产生 pom.xml
+task generatePom << {
+    pom {
+        project {
+            inceptionYear '2008'
+            licenses {
+                license {
+                    name 'The Apache Software License, Version 2.0'
+                    url 'http://www.apache.org/licenses/LICENSE-2.0.txt'
+                    distribution 'repo'
+                }
+            }
+        }
+    }.writeTo("$projectDir/pom.xml")
+}
+
+//task -- 启动 Tomcat
+task itTomcatRun(type: com.bmuschko.gradle.tomcat.tasks.TomcatRun) {
+    daemon = true
+}
+
+//用火狐浏览器集成测试
+task firefoxTest (type: Test) {
+    dependsOn 'itTomcatRun'
+//    finalizedBy 'tomcatStop'
+    doFirst {
+        println "run firefoxTest task..."
+    }
+
+    exclude '**/Test*'
+
+    testLogging {
+        events "passed","failed","standardError"
+    }
+
+    outputs.upToDateWhen { false }  // Always run tests
+    systemProperty "geb.build.reportsDir", reporting.file("$projectDir/build/firefoxTest/geb")
+}
+
 //项目依赖
 dependencies {
     def springbootVersion = '1.2.5.RELEASE'
@@ -94,31 +133,25 @@ dependencies {
     compile 'com.h2database:h2:1.3.176'
     compile 'org.apache.ant:ant:1.9.4'
     compile 'org.codehaus.groovy:groovy-all:2.4.4'
-//    compile 'org.codehaus.groovy:groovy-all:2.4.1'
     compile 'org.slf4j:slf4j-log4j12:1.7.12'
     providedCompile "javax.servlet:javax.servlet-api:3.1.0"
     testCompile 'junit:junit:4.12'
     testCompile "javax.servlet.jsp:jsp-api:2.2"
 
+    //集成测试
+    testCompile "org.codehaus.groovy:groovy-all:2.4.4"
+    testCompile "org.gebish:geb-spock:0.10.0"
+    testCompile("org.spockframework:spock-core:1.0-groovy-2.4") {
+        exclude group: "org.codehaus.groovy"
+    }
+    // If using JUnit, need to depend on geb-junit (3 or 4)
+    testCompile "org.gebish:geb-junit4:0.10.0"
+    testCompile "org.seleniumhq.selenium:selenium-firefox-driver:2.47.1"
+
+    //tomcat中间件
     def tomcatVersion = '7.0.55'
     testRuntime "org.apache.tomcat.embed:tomcat-embed-el:$tomcatVersion"
     tomcat "org.apache.tomcat.embed:tomcat-embed-core:$tomcatVersion",
             "org.apache.tomcat.embed:tomcat-embed-logging-juli:$tomcatVersion",
             "org.apache.tomcat.embed:tomcat-embed-jasper:$tomcatVersion"
-}
-
-//产生 pom.xml task
-task generatePom << {
-    pom {
-        project {
-            inceptionYear '2008'
-            licenses {
-                license {
-                    name 'The Apache Software License, Version 2.0'
-                    url 'http://www.apache.org/licenses/LICENSE-2.0.txt'
-                    distribution 'repo'
-                }
-            }
-        }
-    }.writeTo("$projectDir/pom.xml")
 }
