--- a/demos/autoCheck/src/main/resources/app.properties
+++ b/demos/autoCheck/src/main/resources/app.properties
@@ -7,7 +7,8 @@
 
 #for H2
 spring.datasource.driver-class-name=org.h2.Driver
-spring.datasource.url=jdbc:h2:tcp://localhost/~/autoCheck
+#spring.datasource.url=jdbc:h2:tcp://localhost/~/autoCheck
+spring.datasource.url=jdbc:h2:mem:autoCheck;DB_CLOSE_DELAY=-1
 spring.datasource.username=sa
 spring.datasource.password=sa
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
