--- a/demos/autoCheck/src/main/resources/app.properties
+++ b/demos/autoCheck/src/main/resources/app.properties
@@ -16,6 +16,7 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
 #common
 #spring.jpa.generate-ddl=false
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
+#spring.jpa.show-sql=true
+spring.jpa.show-sql=false
 
 
